# AWS-Light

./: .env.example  .gitignore  ARCHITECTURE.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
aws_light/: config.py  dependencies.py  log.py  main.py
aws_light/api/: deployments.py  iac.py  iam.py  nodes.py  overview.py  platform.py  secrets.py  services.py  storage.py  topology.py  websocket.py
aws_light/autoscaler/: autoscaler.py  metrics_collector.py
aws_light/compute/: docker_client.py  node_manager.py  orchestrator.py  scheduler.py
aws_light/dashboard/: event_bus.py
aws_light/deployment/: rolling_controller.py
cli/: main.py
docs/: architecture.md  examples.md  future-architecture-work.md  future-work.md  getting-started.md  manifests.md  operations.md  topology.md
examples/: combined-stack.yaml  cpu-service.yaml  database-service.yaml  demo-stack.yaml  echo-service.yaml  flaky-service.yaml  hello-service.yaml  internal-call.yaml  secret-service.yaml  sentiment-api.yaml  slow-service.yaml  storage-service.yaml
scripts/: load_test_proxy.py
services/: __init__.py
tests/: conftest.py  test_api_security.py  test_autoscaler.py  test_cached_store.py  test_combined_example.py  test_config.py  test_database_service_example.py  test_docker_client.py  test_iac_applier.py  test_iac_parser.py  test_iam.py  test_internal_call_example.py  test_introspection_api.py  test_orchestrator_reconcile.py  test_proxy_server.py  test_routing_table.py  test_scheduler.py  test_secrets.py  test_storage.py  test_storage_api.py  test_storage_service_example.py
(+62 files in other folders)
