[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-light"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "docker>=7.1.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.0",
    "pyyaml>=6.0.2",
    "click>=8.1.7",
    "httpx>=0.27.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
prod = [
    "asyncpg>=0.29",
    "redis[asyncio]>=5.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
aws-light = "cli.main:cli"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's Depends() in argument defaults is the intended pattern
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires Docker Compose AWS-Light stack",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
